# qwen35x

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  GEMINI_REPORT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
configs/: qwen3_5_0_8b.profile.json
docs/: architecture.md  benchmark-comparison-2026-04-22.md  development_plan.md  flashqla-current-state-2026-04-29.md  gpu_full_inference_checklist.md  references.md
docs/reference/: llama_cpp_qwen35_mapping.md
include/qwen35x/common/: model_profile.h  runtime_target.h
include/qwen35x/compiler/: compiler.h
include/qwen35x/kernels/: kernel_registry.h
include/qwen35x/runtime/: cuda_bench.h  cuda_inference.h  luce_decode_backend.h  luce_profile.h  qwen35x_cuda_backend.h  qwen35x_profile.h  reference_inference.h  runtime.h
include/qwen35x/tokenizer/: tokenizer.h
include/qwen35x/weights/: modelopt_nvfp4.h  safetensors.h
scripts/: benchmark-compare-seq.ps1  benchmark-inference-seq.ps1  benchmark-inference-seq.sh  benchmark-llama-bf16.ps1  benchmark-llama-cli-actual-seq.ps1  benchmark-luce-megakernel-seq.ps1  benchmark-parity.ps1  benchmark-parity.sh  benchmark-prefill-kernels.ps1  benchmark-qwen35x-kernel-seq.ps1  benchmark-qwen35x-vs-llama-matrix.ps1  benchmark-tinygrad-seq.ps1  benchmark-transformers-parity.ps1  build-webgpu-qwen35x-weights.mjs  build.ps1  build.sh  download-hf-model.ps1  download-hf-model.sh  serve-webgpu-qwen35x.ps1  serve-webgpu-transformers-bench.ps1  setup-transformers-parity.ps1  setup-transformers-parity.sh  test-flashqla-iteration.ps1  test-flashqla-prefill-parity.ps1  test-flashqla-prepare-parity.ps1  test-flashqla-state-update-parity.ps1  tune-luce-blocksize-and-decodeblocks.ps1  tune-luce-decode-blocks.ps1  tune-qwen35x-blocksize-and-decodeblocks.ps1  tune-qwen35x-decode-blocks.ps1
scripts/bench/: parity_prompts.txt  parity_prompts_minimal.txt
scripts/hf/: download_model.py  requirements-transformers-parity.txt  transformers_inference.py
scripts/tinygrad/: benchmark_tinygrad_inference.py
src/: flashqla_prepare_parity_main.cu  flashqla_state_update_parity_main.cu  luce_bench_main.cpp  main.cpp  qwen35x_kernel_bench_main.cpp
src/compiler/: compiler.cpp  profile_loader.cpp
src/kernels/: kernel_registry.cpp
src/kernels/cuda/: common.cuh  decode_kernel.cuh  decode_layers.cuh  decode_lm_head.cuh  decode_sm120_mlp.cuh  decode_sync.cuh  kernel.cu  prefill.cu  prefill_flashqla.cu  prefill_flashqla.cuh  qwen35x_decode_stub.cu  variant.cuh  variant_0p8b.cuh  variant_4b.cuh  weights.cuh
src/kernels/cuda/luce_megakernel/: kernel.cu  prefill.cu
src/kernels/cuda/qwen35x_megakernel/: kernel.cu  prefill.cu
src/runtime/: cuda_bench.cu  cuda_bench_stub.cpp  cuda_inference.cu  cuda_inference_api_attention.inl  cuda_inference_api_core.inl  cuda_inference_api_sampling.inl  cuda_inference_internal_core.inl  cuda_inference_internal_kernels.inl  cuda_inference_stub.cpp  luce_decode_backend.cpp  qwen35x_cuda_backend.cpp  reference_decode_backend_api.inl  reference_inference.cpp  reference_inference_api.inl  reference_inference_internal_forward.inl  reference_inference_internal_layers.inl  reference_inference_internal_weights_workspace.inl  runtime.cpp
src/tokenizer/: tokenizer.cpp
src/weights/: modelopt_nvfp4.cpp  safetensors.cpp
tools/webgpu-qwen35x/: README.md  index.html
tools/webgpu-qwen35x/src/: kernels.js  qwen-tokenizer.js  qwen35x-webgpu.js
tools/webgpu-transformers-bench/: README.md  index.html
